samples/_failures_safe/1761359300_d1dfd3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93cada23.c: In function ‘main’:
./samples/SAFE/__tmp_93cada23.c:141:5: error: expected declaration or statement at end of input
  141 |     addEdge(graph, 1, 2, 1);
      |     ^~~~~~~
